fixed notes container overflow

--- a/src/app/notes-container/notes-container.component.scss
+++ b/src/app/notes-container/notes-container.component.scss
@@ -80,3 +80,7 @@ mat-chip {
     margin-top: -20px;
     border-top: 1px solid #ffffff;
 }
+
+.dynamic{
+    overflow: auto;
+}
